--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_grey"
+    style="@style/background"
     tools:context=".MainActivity">
 
-
+    "<!--This textView  contains inline styles-->"
     <TextView
         android:id="@+id/heading"
         android:layout_width="wrap_content"
@@ -16,6 +17,7 @@
         android:fontFamily="sans-serif-black"
         android:text="@string/app_name"
         android:textSize="34sp"
+        style="@style/large_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -133,11 +135,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
-        <ImageButton
+        <Button
             android:id="@+id/score_sub_btn"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_remove_24" />
+android:text="reduce"
+             />
 
         <Switch
             android:id="@+id/team_switch"
@@ -146,11 +149,12 @@
 
             android:layout_gravity="center" />
 
-        <ImageButton
+        <Button
             android:id="@+id/score_add_btn"
             android:layout_width="100dp"
+            android:text="add"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_add_24" />
+            />
     </LinearLayout>
     "<!--This layout contain the score selection spinner-->"
     <FrameLayout
@@ -165,6 +169,7 @@
             android:id="@+id/score_spinner"
             android:layout_width="match_parent"
             android:background="@drawable/spinner_bg"
+
             android:layout_height="40dp" />
     </FrameLayout>
 
