--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,19 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="materialButtonStyle">@style/app_button_style</item>
+    </style>
+    //styles are applied to views according to night and light theme
+    <style name="large_text">
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="background">
+        <item name="android:backgroundTint">@color/black</item>
+    </style>
+    <style name="app_button_style" parent="android:Widget.Button">
+
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">@color/purple</item>
+
     </style>
 </resources>
